--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,4 +4,7 @@
 // Основные файлы
 @import "block/_header.scss";
 @import "block/_slider.scss";
+@import "block/_grid.scss";
 @import "block/_personaly-grid.scss";
+@import "block/_offers__card.scss";
+@import "block/_offers.scss";
