--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -8,3 +8,4 @@
 @import "block/_personaly-grid.scss";
 @import "block/_offers__card.scss";
 @import "block/_offers.scss";
+@import "block/_cities__tour.scss";
