--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -9,3 +9,5 @@
 @import "block/_offers__card.scss";
 @import "block/_offers.scss";
 @import "block/_cities__tour.scss";
+@import "block/_info__sticker.scss";
+@import "block/_hot__tours.scss";
