--- a/app/scss/block/_offers__card.scss
+++ b/app/scss/block/_offers__card.scss
@@ -119,3 +119,101 @@
 			}
 	}
 }
+
+.card__info{
+	display: inline-flex;
+	position: absolute;
+	right: -60px;
+	bottom: 150px;
+	width: 60%;
+	height: 210px;
+
+	&--price{
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		text-align: left;
+		// width: 30%;
+		padding: 30px 28px 30px 28px;
+		background: $dark-grey;
+
+		.tarif-inf{
+			@include font($ral, 400);
+			text-transform: uppercase;
+			font-size: 19px;
+			color: $white;
+		}
+
+		.tarif-costs{
+			@include font($ral, 900);
+			text-transform: uppercase;
+			font-size: 60px;
+			color: $orange;
+		}
+
+		.tarif-euro{
+
+			&:before{
+				content: '';
+				width: 21px;
+				height: 21px;
+				display: inline-block;
+				background: url('../../img/usd/euro-white.png') no-repeat;
+			}
+		}
+
+		.icon-aircraft{
+			margin-bottom: 40px;
+			&:before{
+				content: '';
+				width: 32px;
+				height: 17px;
+				display: inline-block;
+				background: url('../../img/icons/Icon_plane-tickets1.png') no-repeat;
+			}
+		}
+	}
+
+	&--descript{
+		width: 50%;
+		padding: 40px 30px 40px 30px;
+		text-align: left;
+		background: $grid-hover;
+		
+		.descript__content{
+			height: 100%;
+			display: flex;
+			flex-wrap: wrap;
+			align-content: space-between;
+		}
+
+		.descript{
+
+			&__title{
+				@include font($ral, 500);
+				font-size: 30px;
+				text-transform: uppercase;
+				color: $orange;
+			}
+
+			&__txt{
+				@include font($ral, 400);
+				font-size: 16px;
+				color: $dark-grey;
+			}
+
+			&__more{
+				@include font($ral, 600);
+				font-size: 16px;
+				text-transform: uppercase;
+				color: $dark-grey;
+				@include ease-in($easeIn-2s, color);
+
+					&:hover{
+						color: $orange;
+						@include ease-in-out($easeInOut-1s, color);
+					}
+			}
+		}
+	}
+}
