--- a/app/scss/stylesheets/_stylesheets.scss
+++ b/app/scss/stylesheets/_stylesheets.scss
@@ -18,3 +18,31 @@
 		transform: translate(0,-50%);
 	}
 }
+
+.next-icon{
+	position: relative;
+	&:before{
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 0;
+		border-left: solid 8px $white;
+		border-bottom: solid 6px transparent;
+		border-top: solid 6px transparent;
+		transform: translate(0,-50%);
+	}
+}
+
+.prev-icon{
+	position: relative;
+	&:before{
+		content: '';
+		position: absolute;
+		top: 50%;
+		left: 0;
+		border-right: solid 8px $white;
+		border-bottom: solid 6px transparent;
+		border-top: solid 6px transparent;
+		transform: translate(0, -50%);
+	}
+}
